src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CPF</fullName>
        <description>For use with CPF</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Application Awaiting Further Information</fullName>
        </values>
        <values>
            <fullName>Application Rejected - BRCC%2FBoard</fullName>
        </values>
        <values>
            <fullName>Application Rejected - Commercial Team</fullName>
        </values>
        <values>
            <fullName>Application Rejected - Credit</fullName>
        </values>
        <values>
            <fullName>Application Rejected - MCC</fullName>
        </values>
        <values>
            <fullName>Application approved</fullName>
        </values>
        <values>
            <fullName>Application declined</fullName>
        </values>
        <values>
            <fullName>Application submitted</fullName>
        </values>
        <values>
            <fullName>Assigned to BDM - Accept</fullName>
        </values>
        <values>
            <fullName>Assigned to BDM - Rejected</fullName>
        </values>
        <values>
            <fullName>Awaiting offer</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Enquiry from the Customer</fullName>
        </values>
        <values>
            <fullName>Memo - Approved by Credit</fullName>
        </values>
        <values>
            <fullName>Memo - Submitted to Credit</fullName>
        </values>
        <values>
            <fullName>Offered%2FSolicitor Instructed</fullName>
        </values>
        <values>
            <fullName>Postponed</fullName>
        </values>
        <values>
            <fullName>Pre-Completion</fullName>
        </values>
        <values>
            <fullName>Proceed to application</fullName>
        </values>
        <values>
            <fullName>Redeemed</fullName>
        </values>
        <values>
            <fullName>Submitted to BRCC%2FBOARD</fullName>
        </values>
        <values>
            <fullName>Submitted to MCC</fullName>
        </values>
        <values>
            <fullName>Submitted to Underwriting</fullName>
        </values>
        <values>
            <fullName>Term Sheet Issued</fullName>
        </values>
        <values>
            <fullName>Valuation Instructed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HPP BUY To Let %28Rent Only%29</fullName>
        <description>Sales process for converting BTL (Rent only) HPP Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Branch Appointment %28CC USE ONLY%29</fullName>
        </values>
        <values>
            <fullName>Callback Arranged</fullName>
        </values>
        <values>
            <fullName>Customer commitment to proceed</fullName>
        </values>
        <values>
            <fullName>Enquiry from the Customer</fullName>
        </values>
        <values>
            <fullName>HPP - Agreement in principle</fullName>
        </values>
        <values>
            <fullName>HPP - Application written</fullName>
        </values>
        <values>
            <fullName>HPP - Declined</fullName>
        </values>
        <values>
            <fullName>HPP - Offer Stage</fullName>
        </values>
        <values>
            <fullName>HPP - Sanctioned</fullName>
        </values>
        <values>
            <fullName>HPP - Signed App received</fullName>
        </values>
        <values>
            <fullName>HPP - Underwriting</fullName>
        </values>
        <values>
            <fullName>HPP - Valuation</fullName>
        </values>
        <values>
            <fullName>HPP -Eligible Opportunity</fullName>
        </values>
        <values>
            <fullName>HPP Completed %28WON%29</fullName>
        </values>
        <values>
            <fullName>Information given to the customer</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Meeting held with customer</fullName>
        </values>
        <values>
            <fullName>Not Eligible - HPP</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HPP Buy To Let</fullName>
        <description>For the HPP BTL Sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Branch Appointment %28CC USE ONLY%29</fullName>
        </values>
        <values>
            <fullName>Callback Arranged</fullName>
        </values>
        <values>
            <fullName>Customer commitment to proceed</fullName>
        </values>
        <values>
            <fullName>Enquiry from the Customer</fullName>
        </values>
        <values>
            <fullName>HPP - Agreement in principle</fullName>
        </values>
        <values>
            <fullName>HPP - Application written</fullName>
        </values>
        <values>
            <fullName>HPP - Declined</fullName>
        </values>
        <values>
            <fullName>HPP - Offer Stage</fullName>
        </values>
        <values>
            <fullName>HPP - Sanctioned</fullName>
        </values>
        <values>
            <fullName>HPP - Signed App received</fullName>
        </values>
        <values>
            <fullName>HPP - Underwriting</fullName>
        </values>
        <values>
            <fullName>HPP - Valuation</fullName>
        </values>
        <values>
            <fullName>HPP -Eligible Opportunity</fullName>
        </values>
        <values>
            <fullName>HPP Completed %28WON%29</fullName>
        </values>
        <values>
            <fullName>Information given to the customer</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Meeting held with customer</fullName>
        </values>
        <values>
            <fullName>Not Eligible - HPP</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HPP CAA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Affordability Assessment</fullName>
        </values>
        <values>
            <fullName>Agreement in Principle</fullName>
        </values>
        <values>
            <fullName>Application</fullName>
        </values>
        <values>
            <fullName>Awaiting Assessment</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Credit Assessment</fullName>
        </values>
        <values>
            <fullName>HPP - Declined</fullName>
        </values>
        <values>
            <fullName>HPP -Eligible Opportunity</fullName>
        </values>
        <values>
            <fullName>HPP%2FBTL Opportunity - Closed Incomplete</fullName>
        </values>
        <values>
            <fullName>Not Eligible - HPP</fullName>
        </values>
        <values>
            <fullName>Offer</fullName>
        </values>
        <values>
            <fullName>Pre-Completion</fullName>
        </values>
        <values>
            <fullName>Redeemed</fullName>
        </values>
        <values>
            <fullName>Submitted to Underwriting</fullName>
        </values>
        <values>
            <fullName>Valuation</fullName>
        </values>
        <values>
            <fullName>With Al Rayan Bank Solicitor</fullName>
        </values>
        <values>
            <fullName>With IBB Solicitor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HPP Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>HPP - Agreement in principle</fullName>
        </values>
        <values>
            <fullName>HPP - Application written</fullName>
        </values>
        <values>
            <fullName>HPP - Declined</fullName>
        </values>
        <values>
            <fullName>HPP - Offer Stage</fullName>
        </values>
        <values>
            <fullName>HPP - Sanctioned</fullName>
        </values>
        <values>
            <fullName>HPP - Signed App received</fullName>
        </values>
        <values>
            <fullName>HPP - Underwriting</fullName>
        </values>
        <values>
            <fullName>HPP - Valuation</fullName>
        </values>
        <values>
            <fullName>HPP -Eligible Opportunity</fullName>
        </values>
        <values>
            <fullName>HPP Completed %28WON%29</fullName>
        </values>
        <values>
            <fullName>Not Eligible - HPP</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IBB</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Enquiry from the Customer</fullName>
        </values>
        <values>
            <fullName>HPP - Agreement in principle</fullName>
        </values>
        <values>
            <fullName>HPP - Application written</fullName>
        </values>
        <values>
            <fullName>HPP - Declined</fullName>
        </values>
        <values>
            <fullName>HPP - Offer Stage</fullName>
        </values>
        <values>
            <fullName>HPP - Sanctioned</fullName>
        </values>
        <values>
            <fullName>HPP - Signed App received</fullName>
        </values>
        <values>
            <fullName>HPP - Underwriting</fullName>
        </values>
        <values>
            <fullName>HPP - Valuation</fullName>
        </values>
        <values>
            <fullName>HPP -Eligible Opportunity</fullName>
        </values>
        <values>
            <fullName>HPP Completed %28WON%29</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Not Eligible - HPP</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Liabilities Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Approved</fullName>
        </values>
        <values>
            <fullName>Account declined</fullName>
        </values>
        <values>
            <fullName>Account lost</fullName>
        </values>
        <values>
            <fullName>Account opened</fullName>
        </values>
        <values>
            <fullName>Account referred</fullName>
        </values>
        <values>
            <fullName>Awaiting final documents</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Current Address Mismatch</fullName>
        </values>
        <values>
            <fullName>Customer commitment to proceed</fullName>
        </values>
        <values>
            <fullName>Decision Response</fullName>
        </values>
        <values>
            <fullName>Eligibility Completed</fullName>
        </values>
        <values>
            <fullName>Enquiry from the Customer</fullName>
        </values>
        <values>
            <fullName>FTD Details</fullName>
        </values>
        <values>
            <fullName>FTD ISA Details</fullName>
        </values>
        <values>
            <fullName>FTD Setup</fullName>
        </values>
        <values>
            <fullName>ISA Terms %26 Conditions</fullName>
        </values>
        <values>
            <fullName>ISA Transfer</fullName>
        </values>
        <values>
            <fullName>Information given to the customer</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Meeting held with customer</fullName>
        </values>
        <values>
            <fullName>Next Steps</fullName>
        </values>
        <values>
            <fullName>Paperwork recieved</fullName>
        </values>
        <values>
            <fullName>Personal Details</fullName>
        </values>
        <values>
            <fullName>Product Selected</fullName>
        </values>
        <values>
            <fullName>Retention Call - No contact</fullName>
        </values>
        <values>
            <fullName>Retention Call - Not Interested</fullName>
        </values>
        <values>
            <fullName>Retention Call - Retained</fullName>
        </values>
        <values>
            <fullName>Retention Call - To be contacted</fullName>
        </values>
        <values>
            <fullName>Retention Letter issued</fullName>
        </values>
        <values>
            <fullName>Send to EBS</fullName>
        </values>
        <values>
            <fullName>Setup Account in EBS</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NPAA</fullName>
        <description>For use with NPAA record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>2nd Line Authorisation</fullName>
        </values>
        <values>
            <fullName>Account Approved</fullName>
        </values>
        <values>
            <fullName>Account declined</fullName>
        </values>
        <values>
            <fullName>Account lost</fullName>
        </values>
        <values>
            <fullName>Account opened</fullName>
        </values>
        <values>
            <fullName>Account referred</fullName>
        </values>
        <values>
            <fullName>Application Form</fullName>
        </values>
        <values>
            <fullName>Awaiting final documents</fullName>
        </values>
        <values>
            <fullName>Business Details</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Current Address Mismatch</fullName>
        </values>
        <values>
            <fullName>Customer commitment to proceed</fullName>
        </values>
        <values>
            <fullName>Decision Engine Completed</fullName>
        </values>
        <values>
            <fullName>Enquiry from the Customer</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Information given to the customer</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Meeting held with customer</fullName>
        </values>
        <values>
            <fullName>Paperwork recieved</fullName>
        </values>
        <values>
            <fullName>Product Specific</fullName>
        </values>
        <values>
            <fullName>Retention Call - No contact</fullName>
        </values>
        <values>
            <fullName>Retention Call - Not Interested</fullName>
        </values>
        <values>
            <fullName>Retention Call - Retained</fullName>
        </values>
        <values>
            <fullName>Retention Call - To be contacted</fullName>
        </values>
        <values>
            <fullName>Retention Letter issued</fullName>
        </values>
        <values>
            <fullName>Set Up On EBS</fullName>
        </values>
        <values>
            <fullName>Setup Account in EBS</fullName>
        </values>
        <values>
            <fullName>Submitted for Approval</fullName>
        </values>
        <values>
            <fullName>Terms and Conditions Agreed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AIPFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIPFixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIP_to_application__c</fullName>
        <formula>Original_application_completed_date__c -  Original_AIP_completed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIP to application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPFixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <inlineHelpText>8 digits</inlineHelpText>
        <label>Account number to debit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT( IBB_Product__r.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_with_IBB_Account_Number__c</fullName>
        <formula>IF(ISNULL(Account_with_IBB__r.External_Account_Number__c),Account_with_IBB__r.Name,Account_with_IBB__r.External_Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_with_IBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_completion_date__c</fullName>
        <formula>HPP_extended_opportunity__r.Actual_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_funds_secured__c</fullName>
        <label>Additional funds secured</label>
        <summarizedField>Additional_Funds_Secured__c.Amount_secured__c</summarizedField>
        <summaryFilterItems>
            <field>Additional_Funds_Secured__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed won</value>
        </summaryFilterItems>
        <summaryForeignKey>Additional_Funds_Secured__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Address_Country_Premier_Cases__c</fullName>
        <formula>IF( Account.BillingCountry = &apos;United Kingdom&apos;, null, Account.BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Country Premier Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adhoc_EDD_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that selected &apos;Adhoc EDD&apos; during onboarding.</description>
        <label>Adhoc EDD User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adhoc_EDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Internal CAA staff member chose to answer EDD questions during Risk Score assessment</description>
        <label>Adhoc EDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdminFeeForOfferLetter__c</fullName>
        <formula>IF( ispickval(Interested_in__c,&apos;buy to let purchase plan&apos;), BTLAdminFee__c , 
IF( ispickval(Interested_in__c,&apos;home purchase plan&apos;), AdminFeeInitial__c , 
IF( ispickval(Interested_in__c,&apos;home purchase plan premier&apos;),  HPP_extended_opportunity__r.AdminFeeValue__c  , 
IF( ispickval(Interested_in__c,&apos;help to buy home purchase plan&apos;), AdminFeeInitial__c  , 


AdminFeeInitial__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdminFeeForOfferLetter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminFeeFull__c</fullName>
        <formula>IF((Finance_Required__c * 0.01) &lt; 1000.00, 995.00 - AdminFeeInitial__c, (Finance_Required__c * 0.01) - AdminFeeInitial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdminFeeFull</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminFeeInitial__c</fullName>
        <formula>IBB_Product__r.Administration_fee_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdminFeeInitial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advice_at_POS__c</fullName>
        <description>For use with the HPP fact find</description>
        <label>Advice at POS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advised</fullName>
                </value>
                <value>
                    <fullName>Execution Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advised_Sale_PSD__c</fullName>
        <formula>IF(Execution_Only__c , &apos;N&apos;, &apos;Y&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advised Sale PSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(ISNULL( Date_of_Birth_of_Main_Applicant__c ),0,FLOOR((TODAY()-Date_of_Birth_of_Main_Applicant__c )/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_to_T_Cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed to T&amp;Cs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_applicants_are_UK_residents__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All applicants are UK residents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_pages_intialled__c</fullName>
        <description>Used for NPAA 2nd line authorisation event</description>
        <label>All pages intialled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocated_disposable_Income__c</fullName>
        <description>Used for MMR fact find</description>
        <label>Allocated disposable Income</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alterations_countersigned__c</fullName>
        <description>Used for NPAA 2nd line authorisation event</description>
        <label>Alterations countersigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with HPP CAA Fact Find</description>
        <label>Alternate product</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The product you have selected is no longer available</errorMessage>
            <filterItems>
                <field>IBB_Product__c.ShowOnAIP__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipLabel>Opportunities (Alternate product)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_to_release__c</fullName>
        <label>Amount to release</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_review_date__c</fullName>
        <description>For use with CPF view</description>
        <label>Annual review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicantMissing__c</fullName>
        <formula>IF( 
And(No_of_Applicants__c &lt; Account_with_IBB__r.Number_of_account_holders__c, Account_with_IBB__c != null) 

, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicantMissing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_2__c</fullName>
        <description>FIS field</description>
        <label>Applicant 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_3__c</fullName>
        <description>FIS field</description>
        <label>Applicant 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_4__c</fullName>
        <description>FIS field</description>
        <label>Applicant 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_filed_for_Bankruptcy_or_CCJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant filed for Bankruptcy or CCJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Reference_Number__c</fullName>
        <formula>IF( RecordTypeId = &quot;012D0000000QhlAIAS&quot; ,  &quot;HPP&quot;+ Opportunity_Reference__c   ,
IF( RecordTypeId = &quot;012D0000000QWmK&quot; , &quot;LIB&quot;+Opportunity_Reference__c  , Opportunity_Reference__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_completed_date__c</fullName>
        <description>For use with SLA calculations for MG&apos;s SI</description>
        <label>Application completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_not_Proceeding__c</fullName>
        <description>When an application has been written but will not be submitted to udnerwriting please provide the reason</description>
        <inlineHelpText>When an application has been written but will not be submitted to udnerwriting please provide the reason</inlineHelpText>
        <label>Application not Proceeding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Insufficent Documentation</fullName>
                </value>
                <value>
                    <fullName>Gone with Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer  has Lost Property</fullName>
                </value>
                <value>
                    <fullName>Redemption penalty current lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_to_drawdown__c</fullName>
        <formula>HPP_extended_opportunity__r.Actual_Completion_Date__c  - Original_application_completed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application to drawdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_to_offer__c</fullName>
        <formula>HPP_extended_opportunity__r.Original_Offer_Sent_Date__c -   Original_application_completed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application to offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_to_ready_for_credit__c</fullName>
        <formula>Ready_for_credit__c  - Original_application_completed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application to ready for credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Quality_grading__c</fullName>
        <label>Asset Quality grading</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_over_3m__c</fullName>
        <description>For use with HPP CAA eligibility</description>
        <label>Assets over 3m</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_AIP_Letter__c</fullName>
        <label>Attachment AIP Letter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_App_Form__c</fullName>
        <label>Attachment App Form</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Cash_ISA__c</fullName>
        <label>Attachment_Cash_ISA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Offer_Letter__c</fullName>
        <label>Attachment Offer Letter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Welcome_Letter__c</fullName>
        <label>Attachment Welcome Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authority_level_required__c</fullName>
        <label>Authority level required</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Lead_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM Lead Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BTLAdminFee__c</fullName>
        <formula>AdminFeeFull__c + AdminFeeInitial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTLAdminFee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_properties_financed_with_IBB__c</fullName>
        <description>How many other buy to let properties do you have financed with Al Rayan Bank?</description>
        <label>BTL properties financed with us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_After_1_Year__c</fullName>
        <formula>IF( 
FIND(&quot;.&quot;,TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))=0, 
TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000)+&quot;.00&quot;, 
IF ( 
LEN(TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))-FIND(&quot;.&quot;,TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))=1, 
TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000)+&quot;0&quot;, 
LEFT(TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000),FIND(&quot;.&quot;,TEXT(((1+(Profit_Rate_letter__c/100/12))^12)*1000))+2) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance After 1 Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_on_Opened_Account__c</fullName>
        <formula>Account_with_IBB__r.Available_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance on Opened Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_outstanding_at_possession__c</fullName>
        <label>Balance outstanding at possession</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Expected_drawdown_date__c</fullName>
        <description>For use with CPF: this will be maintained by credit as the opportunity goes along to re-present a true reflection on when this matter will be complete</description>
        <label>Bank expected drawdown date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Omitted_Timestamp__c</fullName>
        <label>Batch Omitted Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>